--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,20 @@ deploy:
 sudo: false
 
 install:
-- sudo apt-get install python-numpy
-- sudo apt-get install python-scipy
-- pip install -r requirements.txt
-- pip install -r requirements_dev.txt
-- pip install python-coveralls
-- pip install coveralls
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda create -q -n test python=$TRAVIS_PYTHON_VERSION
+  - source activate test
+  - conda install --yes --file requirements.txt
 
 script:
 - nosetests --with-coverage
@@ -35,9 +43,7 @@ matrix:
   - python: '3.4'
   - python: pypy
 
+
 after_success:
 - travis-sphinx deploy
 - coveralls
-
-notifications:
-  slack: ssipyga:yyz0hyWmiaoGGnprhjqDXUwk
