--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
   - source activate test
   - conda install --yes --file requirements.txt
   - pip install -r requirements_dev.txt
+  - pip install travis-sphinx
   - pip install .
   - mv ./detector_aedes/config_sample.yml ./detector_aedes/config.yml
 
