Agrego instalacion de coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,13 +36,14 @@ install:
   - source activate test
   - conda install --yes --file requirements.txt
   - pip install -r requirements_dev.txt
+  - pip install coveralls
   - pip install travis-sphinx
   - pip install .
   - mv ./detector_aedes/config_sample.yml ./detector_aedes/config.yml
 
 script:
 - source activate test
-- nosetests --with-coverage
+- coverage run --source=detector_aedes setup.py test
 - travis-sphinx --source=docs -n build
 
 language: python
